--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     "autoload": {
         "psr-4": {
             "WPEmergeTwig\\": "src/"
-        }
+        },
+        "files": [
+            "config.php"
+        ]
     },
     "require": {
         "php": "^7.0",
